projects.css
.nav-item {
	color: white !important;
}

.sides {
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	background-repeat:no-repeat;
	background: -webkit-linear-gradient(#ff6a00, #ee0979);
	background: -moz-linear-gradient(#ff6a00, #ee0979);
	background: -ms-linear-gradient(#ff6a00, #ee0979);
	background: -o-linear-gradient(#ff6a00, #ee0979);
	background: linear-gradient(#ff6a00, #ee0979);
}

.bg-3 {
	padding-top: 6em;
	padding-bottom: 4em;
}


.icon-padding {
	padding-left: 20px;
	padding-right: 20px;
}

.button-mid {
	padding-left: 2em;
	padding-right: 2em;
	margin-left: 20px;
	margin-right: 20px;
	margin-top: 40px;
	color: white !important;
}

.nav-button {
	color: white !important;
	border-color: white !important;
}

.navbar-bottom {
	color: white !important;
}

.pill-space {
	margin-right: 20px;
	margin-left: 20px;
	padding-left: 2em !important;
	padding-right: 2em !important;
}

.bottom-button-space {
	margin-left: 0.5em;
	margin-right: 0.5em;
}

.section-header {
	font-weight: lighter;
	font-size: 60px;
  	background: -webkit-linear-gradient(#ff6a00, #ee0979);
  	-webkit-background-clip: text;
  	-webkit-text-fill-color: transparent;
  	padding-bottom: 0.2em;
}

@media only screen and (max-width: 850px) {
    .pill-space {
        margin-top: 1em;
        margin-bottom: 1em;
    }
    .card {
    	margin-top: 0.5em;
    	margin-bottom: 0.5em;
    }
    .section-header {
    	font-size: 40px;
    }
    .projects-background {
		background: #ecf0f1;
		padding-left: 0em;
		padding-right: 0em;
	}
	.w-75 {
		width: 100%;
	}
}

@media only screen and (max-width: 550px) {
	.bottom-button-space {
		margin-top: 0.5em;
		margin-bottom: 0.5em;
	}
}

.footer-background {
	background-color: #343a40;
	color: white;
}

i {
	color: white;
}


.contact-me-info {
	font-size: 20px;
}

.name-sub-text {
	font-weight: lighter !important;
	font-size: 30px;
	color: white;
}

.card {
	margin-left: 1em;
	margin-right: 1em;
}

.projects-background {
	background: #ecf0f1;
	padding-left: 5em;
	padding-right: 5em;
}

